Fix arrows on mobile on image-gallery component

--- a/resources/sass/support-us/_image-gallery.scss
+++ b/resources/sass/support-us/_image-gallery.scss
@@ -54,11 +54,13 @@
 }
 
 .image-gallery .collection-carousel button.carousel-control-prev {
+  left: 0;
   @media (min-width: 600px) {
     left: -9px;
   }
 }
 .image-gallery .collection-carousel button.carousel-control-next {
+  right: 0;
   @media (min-width: 600px) {
     right: -9px;
   }
